# f1-calendar

./: .gitpod.Dockerfile  .gitpod.yml  README.md  full.ics  generate.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  dependency-review.yml  linter.yml  publish.yaml  publish.yml
